namespaces/guestbook/networking.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: bookinfo-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: bookinfo
spec:
  hosts:
  - "*"
  gateways:
  - bookinfo-gateway
  http:

  # rewrites localhost/test to hit / on the destination service.
  - match:
    - uri:
        prefix: "/test/"
    rewrite:
      uri: "/"
    route:
    - destination:
        host: guestbook-ui
        port:
          number: 80
